# codexU

./: .gitignore  CHANGELOG.md  Makefile  README.en.md  README.md  SECURITY.md
.codex/skills/codexu-release/: SKILL.md
.codex/skills/codexu-release/agents/: openai.yaml
Resources/: Info.plist
Sources/CodexUsageWidget/: main.swift
Sources/CodexUsageWidget/Domain/: AgentRuntime.swift  StatisticsTimeZone.swift  StatusItemPresentationSelfTest.swift  TokenFormatter.swift
Sources/CodexUsageWidget/Providers/: RuntimeProvider.swift
Sources/CodexUsageWidget/Services/: AppUpdateStore.swift  MultiRuntimeUsageReader.swift
Sources/CodexUsageWidget/UI/: RuntimeViews.swift  StatusItemPresentation.swift  StatusItemRenderer.swift  StatusItemSettingsView.swift  UpdateViews.swift
docs/: DESIGN_SYSTEM.md  release-notes-v1.0.0-beta.md
scripts/: package-dmg.sh  test-statistics-time-zone.sh
windows/: README.md  build.ps1  codexU-Windows.spec  pyproject.toml  requirements.txt  run.ps1  setup.ps1  test.ps1
windows/scripts/: claude_statusline_bridge.py  run_demo_app.py
windows/src/codexu_win/: __init__.py  __main__.py  app.py  demo.py  i18n.py  models.py  paths.py  service.py  settings.py  utils.py
windows/src/codexu_win/data/: __init__.py  app_server.py  claude_reader.py  codex_reader.py
windows/src/codexu_win/ui/: __init__.py  main_window.py  settings_dialog.py  theme.py  tray.py  widgets.py
windows/tests/: test_app_controller.py  test_app_server.py  test_claude_reader.py  test_codex_reader.py  test_service.py  test_ui_smoke.py
(+1 files in other folders)
