[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "codexu-windows"
version = "0.1.0"
description = "Local-first Codex and Claude Code usage dashboard for Windows"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "PySide6-Essentials>=6.8,<7",
]

[project.scripts]
codexu-windows = "codexu_win.app:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
